# slingshot

./: .dockerignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  models.py  pyproject.toml  utils.py
backend/agents/: state.py
backend/api/: macro.py  portfolio.py  research.py  vault.py  websocket.py
backend/rag/: __init__.py
backend/tools/: base.py
backend/vault/: __init__.py
docs/: IMPLEMENTATION_PLAN.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(landing)/: layout.tsx  page.tsx
frontend/src/app/macro/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/components/chat/: FloatingChat.tsx
frontend/src/components/landing/: CTASection.tsx  DashboardPreview.tsx  FeatureCards.tsx  FloatingParticles.tsx  Footer.tsx  HeroSection.tsx  MeshGradient.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/macro/: CausalChain.tsx  CompanyImpactGrid.tsx  MacroReport.tsx  TradeIdeasTable.tsx
frontend/src/components/portfolio/: HoldingsTable.tsx  PortfolioOverview.tsx  PortfolioReport.tsx  SectorChart.tsx  StressTestResults.tsx
frontend/src/components/research/: AgentChat.tsx  ResearchReport.tsx  SearchBar.tsx  ThoughtLog.tsx
frontend/src/lib/: api.ts  demoUtils.ts  socket.ts
frontend/src/stores/: chat.ts  macro.ts  portfolio.ts  research.ts  thoughts.ts
frontend/src/types/: index.ts
(+16 files in other folders)
